--- a/index.html
+++ b/index.html
@@ -30,45 +30,73 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div id="hour-9" class=" row time-block">
+      <form class="row">
+      <div id="hour-9" class="time-block">
         9am
       </div>
+      <textarea name="Reminder" id="reminderArea" class="discription"></textarea>
       <button class="saveBtn"></button>
-      <div id="hour-10" class=" row time-block">
+    </form>
+    <form class="row">
+      <div id="hour-10" class="time-block">
         10am 
       </div>
+      <textarea name="Reminder" id="reminderArea" class="reminder"></textarea>
       <button class="saveBtn"></button>
-      <div id="hour-11" class="row time-block">
+    </form>
+      <form class="row">
+      <div id="hour-11" class="time-block">
         11am 
       </div>
+      <textarea name="Reminder" id="reminderArea" class="reminder"></textarea>
       <button class="saveBtn"></button>
-      <div id="hour-12" class=" row time-block">
+    </form>
+      <form class="row">
+      <div id="hour-12" class="time-block">
         12pm 
       </div>
+      <textarea name="Reminder" id="reminderArea" class="reminder"></textarea>
       <button class="saveBtn"></button>
-      <div id="hour-1" class="row time-block">
+    </form>
+      <form class="row">
+      <div id="hour-1" class="time-block">
         1pm 
       </div>
+      <textarea name="Reminder" id="reminderArea" class="reminder"></textarea>
       <button class="saveBtn"></button>
-      <div id="hour-2" class="row time-block">
+    </form>
+      <form class="row">
+      <div id="hour-2" class="time-block">
         2pm 
       </div>
+      <textarea name="Reminder" id="reminderArea" class="reminder"></textarea>
       <button class="saveBtn"></button>
-      <div id="hour-3" class="row time-block">
+    </form>
+      <form class="row">
+      <div id="hour-3" class="time-block">
         3pm 
       </div>
+      <textarea name="Reminder" id="reminderArea" class="reminder"></textarea>
       <button class="saveBtn"></button>
-      <div id="hour-4" class="row time-block">
+    </form>
+      <form class="row">
+      <div id="hour-4" class="time-block">
         4pm 
       </div>
+      <textarea name="Reminder" id="reminderArea" class="reminder"></textarea>
       <button class="saveBtn"></button>
-      <div id="hour-5" class="row time-block">
+    </form>
+      <form class="row">
+      <div id="hour-5" class="time-block">
         5pm 
       </div>
+      <textarea name="Reminder" id="reminderArea" class="reminder"></textarea>
       <button class="saveBtn"></button>
+    </form>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
