cleaned up html file

--- a/index.html
+++ b/index.html
@@ -30,69 +30,69 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <form class="row">
-      <div id="hour-9" class="time-block">
-        9am
+      <div id="hour-9" class="row time-block">
+        <div class="col-md-2 hour">
+          9am
+        </div>
+        <textarea class="col-md-8 description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <textarea name="Reminder" id="reminderArea" class="discription"></textarea>
-      <button class="saveBtn"></button>
-    </form>
-    <form class="row">
-      <div id="hour-10" class="time-block">
-        10am 
+      <div id="hour-10" class="row time-block">
+        <div class="col-md-2 hour">
+          10am
+        </div>
+        <textarea class="col-md-8 description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <textarea name="Reminder" id="reminderArea" class="reminder"></textarea>
-      <button class="saveBtn"></button>
-    </form>
-      <form class="row">
-      <div id="hour-11" class="time-block">
-        11am 
+      <div id="hour-11" class="row time-block">
+        <div class="col-md-2 hour">
+          11am
+        </div>
+        <textarea class="col-md-8 description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <textarea name="Reminder" id="reminderArea" class="reminder"></textarea>
-      <button class="saveBtn"></button>
-    </form>
-      <form class="row">
-      <div id="hour-12" class="time-block">
-        12pm 
+      <div id="hour-12" class="row time-block">
+        <div class="col-md-2 hour">
+          12pm
+        </div>
+        <textarea class="col-md-8 description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <textarea name="Reminder" id="reminderArea" class="reminder"></textarea>
-      <button class="saveBtn"></button>
-    </form>
-      <form class="row">
-      <div id="hour-1" class="time-block">
-        1pm 
+      <div id="hour-13" class="row time-block">
+        <div class="col-md-2 hour">
+          1pm
+        </div>
+        <textarea class="col-md-8 description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <textarea name="Reminder" id="reminderArea" class="reminder"></textarea>
-      <button class="saveBtn"></button>
-    </form>
-      <form class="row">
-      <div id="hour-2" class="time-block">
-        2pm 
+      <div id="hour-14" class="row time-block">
+        <div class="col-md-2 hour">
+          2pm
+        </div>
+        <textarea class="col-md-8 description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <textarea name="Reminder" id="reminderArea" class="reminder"></textarea>
-      <button class="saveBtn"></button>
-    </form>
-      <form class="row">
-      <div id="hour-3" class="time-block">
-        3pm 
+      <div id="hour-15" class="row time-block">
+        <div class="col-md-2 hour">
+          3pm
+        </div>
+        <textarea class="col-md-8 description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <textarea name="Reminder" id="reminderArea" class="reminder"></textarea>
-      <button class="saveBtn"></button>
-    </form>
-      <form class="row">
-      <div id="hour-4" class="time-block">
-        4pm 
+      <div id="hour-16" class="row time-block">
+        <div class="col-md-2 hour">
+          4pm
+        </div>
+        <textarea class="col-md-8 description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <textarea name="Reminder" id="reminderArea" class="reminder"></textarea>
-      <button class="saveBtn"></button>
-    </form>
-      <form class="row">
-      <div id="hour-5" class="time-block">
-        5pm 
+      <div id="hour-17" class="row time-block">
+        <div class="col-md-2 hour">
+          5pm
+        </div>
+        <textarea class="col-md-8 description"></textarea>
+        <button class="saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <textarea name="Reminder" id="reminderArea" class="reminder"></textarea>
-      <button class="saveBtn"></button>
-    </form>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
